<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottom_sheet"
        style="@style/Widget.Material3.BottomSheet.DragHandle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/margin_large"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <com.google.android.material.bottomsheet.BottomSheetDragHandleView
            android:id="@+id/drag_handle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent" />
        <View
            android:id="@+id/view"
            android:layout_height="@dimen/view_height"
            android:layout_width="@dimen/view_width"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/bottom_sheet_lien"
            android:layout_marginTop="@dimen/margin_large"
            app:layout_constraintTop_toBottomOf="@id/drag_handle"/>
        <TextView
            android:id="@+id/text_filter"
            style="@style/TextAppearance.Material3.TitleMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter"
            android:layout_marginTop="@dimen/margin_x_large"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view" />
        <TextView
            android:id="@+id/text_Category"
            style="@style/TextTitleChips"
            android:text="@string/category"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_filter" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chip_group_category"
            style="@style/ChipGroupTodo"
            android:layout_marginTop="@dimen/margin_large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_Category"
            app:singleSelection="true">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_done"
                    style="@style/Chips_choice"
                    android:layout_weight="1"
                    android:text="@string/done"
                    android:checked="true"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_inProgress"
                    style="@style/Chips_choice"
                    android:layout_weight="1"
                    android:text="@string/in_progress" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_toDo"
                    style="@style/Chips_choice"
                    android:layout_weight="1"
                    android:text="@string/todo" />
            </androidx.appcompat.widget.LinearLayoutCompat>
        </com.google.android.material.chip.ChipGroup>

        <TextView
            android:id="@+id/text_datePicker"
            style="@style/TextTitleChips"
            android:text="@string/datePacker"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/chip_group_category" />
        <EditText
            android:id="@+id/dateTextField"
            style="@style/input_text_field"
            android:layout_marginTop="@dimen/margin_large"
            android:layout_marginHorizontal="@dimen/margin_large"
            android:paddingHorizontal="@dimen/padding_large"
            android:hint="dd/mm/yy"
            android:drawableLeft="@drawable/calendar_blank"
            android:drawablePadding="@dimen/margin_medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_datePicker" />

        <Button
            android:id="@+id/button"
            style="@style/Button"
            android:layout_marginTop="@dimen/margin_large"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dateTextField"
            android:text="@string/add" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
