<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/recently_card_home_background"
        android:paddingHorizontal="@dimen/padding_large"
        android:paddingVertical="8dp">

        <TextView
            android:id="@+id/text_view_recently_title"
            style="@style/Text.TitleToDo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:text="@string/home_recently_card_title"
            android:textSize="@dimen/text_large"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_view_recently_body"
            style="@style/Text.BodyToDo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ellipsize="end"
            android:fontFamily="@font/roboto"
            android:maxLines="2"
            android:text="@string/recently_card_body"
            android:textSize="@dimen/text_medium"
            app:layout_constraintTop_toBottomOf="@id/text_view_recently_title" />

        <View
            android:id="@+id/view_recently_card_seperator"
            android:layout_width="match_parent"
            android:layout_height=".5dp"
            android:layout_marginTop="@dimen/margin_medium"
            android:background="#42474E"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_view_recently_body" />

        <TextView
            android:id="@+id/recently_card_time"
            style="@style/TextTimeCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:drawableStart="@drawable/clockcountdown"
            android:drawablePadding="@dimen/padding_medium"
            android:text="@string/home_recently_card_time"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_recently_card_seperator" />

        <TextView
            android:id="@+id/recently_card_date"
            style="@style/TextTimeCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:drawablePadding="@dimen/padding_medium"
            android:text="@string/home_recently_card_date"
            app:drawableStartCompat="@drawable/calendarblank"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_recently_card_seperator" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>